update financebench_id_00521 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1836,6 +1836,13 @@ financebench_id_00521:
   question: What are major acquisitions that Ulta Beauty has done in FY2023 and FY2022?
   answer: Ulta Beauty did not make any acquisitions in FY2023 and FY2022.
   page(s): '57'
+
+  category: 0-RETRIEVE
+  correctness: >-
+    the answer concludes that there are no major acquisitions,
+    or that no such major acquisitions are explicitly reported
+
+
 financebench_id_00601:
   doc: ULTABEAUTY_2023Q4_EARNINGS
   question: What drove the reduction in SG&A expense as a percent of net sales in
