update financebench_id_00605 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1878,6 +1878,12 @@ financebench_id_00605:
   answer: 36%. The answer here assumes FY2023 refers to the 12 months ended on January
     28, 2023 (although the company refers to this period as its fiscal 2022.
   page(s): '3'
+
+  category: 3-CALC-COMPLEX
+  correctness: >-
+    the answer contains a calculated percentage value that is approximately in the range from 30% to 40%
+
+
 financebench_id_00606:
   doc: ULTABEAUTY_2023Q4_EARNINGS
   question: Did Ulta Beauty's wages expense as a percent of net sales increase or
