update financebench_id_00566 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1960,6 +1960,12 @@ financebench_id_00566:
     fiscal period?
   answer: No. Verizon's debt decreased by $229 million.
   page(s): '77'
+
+  category: 1-COMPARE
+  correctness: >-
+    the answer concludes that debt decreased
+
+
 financebench_id_06247:
   doc: WALMART_2018_10K
   question: 'What is FY2018 days payable outstanding (DPO) for Walmart? DPO is defined
