update financebench_id_00499 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -46,7 +46,7 @@ financebench_id_00499:
     the answer opines that 3M is actually managing capital assets efficiently,
     and justifies such opinion by certain calculated financial ratios
     showing that Fixed Assets are small relative to Revenue or relative to Total Assets,
-    or that Return on Assets is quite good
+    or that Return on Assets (RoA) is quite good
 
 
 financebench_id_01226:
