--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -655,7 +655,8 @@ financebench_id_01351:
 
   category: 2-CALC-CHANGE
   correctness: >-
-    the answer says that the effective tax rate changed from 24.6% to 21.6%, or that it decreased by 3 pencentage points
+    the answer says that the effective tax rate changed from 24.6% to 21.6%,
+    and/or that it decreased by 3 pencentage points
 
 
 financebench_id_01964:
