--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -679,7 +679,7 @@ financebench_id_01981:
 
   category: 0-RETRIEVE
   correctness: >-
-    the answer is affirmative, i.e., American Express's cardmember retention was good
+    the answer is affirmative, i.e., retention was good
 
 
 financebench_id_05718:
