update financebench_id_00288 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -809,7 +809,7 @@ financebench_id_00288:
     
   category: 1-COMPARE
   correctness: >-
-    the answer is affirmative, i.e., there was a decrease in Cash & Cash Equivalents
+    the answer is affirmative, i.e., Cash & Cash Equivalents decreased
 
 
 financebench_id_00460:
