update financebench_id_00460 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -822,7 +822,7 @@ financebench_id_00460:
       
   category: 1-COMPARE
   correctness: >-
-    the answer concludes there was a decrease in the number of stores
+    the answer mentions the number of stores decreased
 
 
 financebench_id_01902:
