update financebench_id_01091 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -927,7 +927,7 @@ financebench_id_01091:
   
   category: 0-RETRIEVE
   correctness: >-
-    the answer is affirmative, i.e., Boeing faced lawsuits / legal battles
+    the answer is affirmative, i.e., there were material lawsuits / legal battles
 
 
 financebench_id_00678:
