update financebench_id_01290 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -956,7 +956,7 @@ financebench_id_01290:
 
   category: 0-RETRIEVE
   correctness: >-
-    the answer mentions commercial airlines and the US government
+    the answer mentions commercial airlines and US government
 
 
 financebench_id_00464:
