--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1097,8 +1097,8 @@ financebench_id_00005:
 
   category: 3-CALC-COMPLEX
   correctness: >-
-    the answer is affirmative, i.e., Corning had positive working capital,
-    and contains a calculated Working Capital metric value that is positive
+    the answer is affirmative, i.e., Working Capital was positive,
+    proven by a calculated Working Capital metric value that is positive
 
 
 financebench_id_04209:
