update financebench_id_01107 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1162,7 +1162,7 @@ financebench_id_01107:
 
   category: 0-RETRIEVE
   correctness: >-
-    the answer is affirmative, i.e., CVS Health faced lawsuits / legal battles
+    the answer is affirmative, i.e., there were material lawsuits / legal battles
 
 
 financebench_id_01244:
