--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1173,7 +1173,7 @@ financebench_id_01244:
 
   category: 0-RETRIEVE
   correctness: >-
-    the answer is affirmative, i.e., CVS Health paid dividends
+    the answer is affirmative, i.e., dividends were paid 
 
 
 financebench_id_00839:
