--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1815,7 +1815,8 @@ financebench_id_00283:
 
   category: 6-OTHER-ADVANCED
   correctness: >-
-    the answer contains a quantity that is approximately in the range from 70 million to 80 million
+    the answer contains a quantity that is approximately in the range from 70 to 80 (implicit unit of millions)
+    or the range from 70 million to 80 million
 
 
 financebench_id_00724:
