update financebench_id_01865 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -106,8 +106,7 @@ financebench_id_01865:
 
   category: 1-COMPARE
   correctness: >-
-    the answer concludes that the Consumer segment, with a negative change in Organic Sales,
-    has negatively impacted 3M's overall growth excluding M&A
+    the answer identifies Consumer segment as negative contributor
 
 
 financebench_id_00807:
