update financebench_id_04735 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -196,7 +196,9 @@ financebench_id_04735:
 
   category: 3-CALC-COMPLEX
   correctness: >-
-    the answer contains a calculated Operating Cash Flow Ratio metric value that is in the range from 0.60 to 0.70
+    the answer contains a calculated Operating Cash Flow Ratio
+    decimal value that is approximately in the range from 0.60 to 0.70,
+    or, alternatively, a calculated percentage value that is approximately in the range from 60% to 70%
 
 
 financebench_id_07507:
