--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -314,7 +314,8 @@ financebench_id_06655:
 
   category: 3-CALC-COMPLEX
   correctness: >-
-    the answer contains a calculated Days Payable Outstanding (DPO) metric value that is in the range from 90.00 to 100.00
+    the answer contains a calculated Days Payable Outstanding (DPO) metric value
+    that is approximately in the range from 90.00 to 100.00
 
 
 financebench_id_08135:
