update financebench_id_08135 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -328,7 +328,7 @@ financebench_id_08135:
 
   category: 2-CALC-CHANGE
   correctness: >-
-    the answer contains a calculated Revenue change percentage that is approximately 30%, 30.7%, 30.8% or 31%
+    the answer contains a calculated Revenue change percentage value that is approximately 30%, 30.7%, 30.8% or 31%
 
 
 financebench_id_08286:
