update financebench_id_01079 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -414,7 +414,7 @@ financebench_id_01079:
     the answer mentions acquisitions in at least 2 of the following:
     - Czech Republic;
     - New Zealand; and
-    - Shanghai, China (or alternatively just "Shanghai" or just "China")
+    - Shanghai, China (or, alternatively, just "Shanghai" or just "China")
 
 
 financebench_id_01148:
