--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -165,7 +165,7 @@ financebench_id_02987:
 
   category: 3-CALC-COMPLEX
   correctness: >-
-    the answer contains a calculated Fixed Asset Turnover Ratio metric value that is in the range from 23.00 to 25.00
+    the answer contains a calculated Fixed Asset Turnover Ratio decimal value that is in the range from 23.00 to 25.00
 
 
 financebench_id_07966:
