--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -296,9 +296,9 @@ financebench_id_10420:
 
   category: 3-CALC-COMPLEX
   correctness: >-
-    the answer contains a calculated Return on Assets (RoA) Ratio
-    percentage value that is NEGATIVE and approximately in the range from -2.0% to -1.5%,
-    or, alternatively, a calculated decimal value that is NEGATIVE and approximately in the range from -0.020 to -0.015
+    the answer contains a calculated Return on Assets (RoA)
+    percentage value that is NEGATIVE and approximately in the range from -2.00% to -1.40%,
+    or, alternatively, a calculated decimal value that is NEGATIVE and approximately in the range from -0.0200 to -0.0140
 
 
 financebench_id_06655:
