update financebench_id_01935 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -372,7 +372,7 @@ financebench_id_01935:
 
   category: 0-RETRIEVE
   correctness: >-
-    the answer mentions supplemental indentures related to debt notes
+    the answer mentions supplemental indentures related to debt
 
 
 financebench_id_00799:
