update financebench_id_03069 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -493,9 +493,9 @@ financebench_id_03069:
 
   category: 3-CALC-COMPLEX
   correctness: >-
-    the answer contains a calculated Depreciation & Amortization (D&A) Margin percentage value,
-    (using Net Revenue as denominator) that is approximately 4% or 4.2%,
-    or, alternatively, a decimal value that is approximately 0.04
+    the answer contains a calculated Depreciation & Amortization (D&A) Margin (using Net Revenue as denominator)
+    percentage value that is approximately in the range from 4.00% to 4.50%,
+    or, alternatively, a decimal value that is approximately in the range from 0.0400 to 0.0450
 
 
 financebench_id_00222:
