update financebench_id_01279 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -569,7 +569,7 @@ financebench_id_01279:
 
   category: 1-COMPARE
   correctness: >-
-    the answer concludes that Operations / Operating Cash Flows brought in the most cash
+    the answer concludes that Operations / Operating Cash Flows brought in most cash
 
 
 financebench_id_00563:
