update financebench_id_00563 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -581,7 +581,7 @@ financebench_id_00563:
 
   category: 1-COMPARE
   correctness: >-
-    the answer concludes that Data Center segment's revenue proportionally grew the most
+    the answer identifies Data Center segment as proportionally growing most strongly
 
 
 financebench_id_00757:
