--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -803,7 +803,7 @@ financebench_id_01275:
 
   category: 1-COMPARE
   correctness: >-
-    the answer concludes that Operations / Operating Cash Flows brought in the most cash
+    the answer identifies that Operations / Operating Cash Flows as bringing in most cash
 
 
 financebench_id_00288:
