update financebench_id_00460 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -828,7 +828,7 @@ financebench_id_00460:
 
   category: 1-COMPARE
   correctness: >-
-    the answer mentions the number of stores decreased
+    the answer mentions that number of stores decreased
 
 
 financebench_id_01902:
