--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -919,7 +919,7 @@ financebench_id_00517:
 
   category: 3-CALC-COMPLEX
   correctness: |-
-    the answer mentions the following 3 categories:
+    the answer mentions following 3 categories:
     - Commercial Airplanes;
     - Defense (or fully written "Defense, Space & Security"); and
     - Services (or fully written "Global Services")
