update financebench_id_00494 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -988,7 +988,7 @@ financebench_id_00494:
 
   category: 0-RETRIEVE
   correctness: >-
-    the answer mention increase(s) in production
+    the answer mentions increase(s) in production rate(s)
 
 
 financebench_id_00585:
