--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1135,7 +1135,7 @@ financebench_id_05915:
   category: 3-CALC-COMPLEX
   correctness: >-
     the answer constains a calculated Fixed Asset Turnover Ratio
-    metric value that is approximately in the range from 17.00 to 19.00
+    decimal value that is approximately in the range from 17.00 to 19.00
 
 
 financebench_id_00790:
