update financebench_id_00822 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1207,7 +1207,7 @@ financebench_id_00822:
 
   category: 1-COMPARE
   correctness: >-
-    the answer identifies Johnson as that person
+    the answer identifies Johnson as receiving many votes against
 
 
 financebench_id_04103:
