--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1240,7 +1240,9 @@ financebench_id_03471:
 
   category: 3-CALC-COMPLEX
   correctness: >-
-    the answer contains a calculated Working Capital Ratio metric value that is in the range from 0.65 to 0.70
+    the answer contains a calculated Working Capital Ratio
+    decimal value that is in the range from 0.65 to 0.70,
+    or, alternatively, a calculated percentage value that is in the range from 65% to 70%
 
 
 financebench_id_04854:
