update financebench_id_10136 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1275,7 +1275,7 @@ financebench_id_10136:
   correctness: >-
     the answer contains a calculated Retention Ratio
     decimal value that is approximately in the range from 0.50 to 0.55,
-    or, alternatively, a percentage value that is in the range from 50% to 55%
+    or, alternatively, a percentage value that is approximately in the range from 50% to 55%
 
 
 financebench_id_00299:
