--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1350,7 +1350,8 @@ financebench_id_10499:
 
   category: 3-CALC-COMPLEX
   correctness: >-
-    the answer contains a calculated Inventory Turnover Ratio metric value that is approximately in the range from 6.00 to 6.50
+    the answer contains a calculated Inventory Turnover Ratio
+    decimal value that is approximately in the range from 6.00 to 6.50
 
 
 financebench_id_04412:
