--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1366,7 +1366,7 @@ financebench_id_04412:
 
   category: 3-CALC-COMPLEX
   correctness: >-
-    the answer contains a calculated Asset Turnover Ratio metric value that is approximately in the range from 1.30 to 1.40
+    the answer contains a calculated Asset Turnover Ratio decimal value that is approximately in the range from 1.30 to 1.40
 
 
 financebench_id_03031:
