update financebench_id_00552 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1514,8 +1514,7 @@ financebench_id_00552:
 
   category: 3-CALC-COMPLEX
   correctness: >-
-    the answer contains calculated Total Debt values for 2022 and 2023,
-    and concludes that Total Debt decreased
+    the answer contains calculated Total Debt values for 2022 and 2023, and concludes that Total Debt decreased
 
 
 financebench_id_04458:
