update financebench_id_01163 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1604,7 +1604,7 @@ financebench_id_01163:
 
   category: 1-COMPARE
   correctness: >-
-    the answer concludes that Operations / Operating Cash Flows brought in the most cash
+    the answer identifies Operations / Operating Cash Flows as bringing in most cash
 
 
 financebench_id_00080:
